<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:hint="Name "
            android:inputType="textCapWords"
            android:id="@+id/name_field"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/toppings"
            android:layout_below="@id/name_field"
            android:id="@+id/toppings"
            style="@style/HeaderTextStyle"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/toppings"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/whipped_cream"
            android:textSize="16sp"
            android:paddingLeft="24dp"
            android:id="@+id/whipped_checkbox"/>

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/whipped_checkbox"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/chocolate"
            android:textSize="16sp"
            android:paddingLeft="24dp"
            android:id="@+id/chocalate_checkbox"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            style="@style/HeaderTextStyle"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:layout_below="@id/chocalate_checkbox"
            android:id="@+id/quantit-text-view"/>

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="+"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:layout_below="@+id/quantit-text-view"
            android:id="@+id/add_button_view"
            android:onClick="increment"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="1"
            android:layout_toRightOf="@+id/add_button_view"
            android:layout_below="@+id/quantit-text-view"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            style="@style/HeaderTextStyle"
            android:id="@+id/quantity_text_view"/>

        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:text="-"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="16dp"
            android:layout_below="@+id/quantit-text-view"
            android:layout_toRightOf="@id/quantity_text_view"
            android:id="@+id/minus_button_view"
            android:onClick="decrement"
            />


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_below="@+id/add_button_view"
            android:onClick="submitOrder"
            />

    </RelativeLayout>
</ScrollView>